--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="aoyuntech@163.com">aoyun</maintainer>
+  <maintainer email="aoyuntech@163.com">aoyuntech</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
